Fix content spacing

--- a/static/style.css
+++ b/static/style.css
@@ -82,7 +82,7 @@ footer p{
 
 .title{
   position: relative;
-  top: 75%;
+  top: 60%;
   width: 75%;
   margin: 0 auto;
 }
